--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -12,11 +12,11 @@ issueTrackerURL="http://my.issue.tracker/" #optional
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
 # The modid of the mod
-modId="globalrpg" #mandatory
+modId="main" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 version="1_0.1a_beta" #mandatory
  # A display name for the mod
-displayName="Global Rpg Mod" #mandatory
+displayName="Fallen Dawn RPG Mod" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
 
 # (updateJSONURL="" #optional)!
@@ -26,7 +26,7 @@ displayName="Global Rpg Mod" #mandatory
 # (displayURL="http://example.com/" #optional)!
 
 # A file name (in the root of the mod JAR) containing a logo for display
-logoFile="globalrpg.png" #optional
+logoFile="fallendawn.png" #optional
 # A text field displayed in the mod UI
 
 #credits="Thanks for this example mod goes to Java" #optional!
@@ -43,7 +43,7 @@ Global Rpg Mod:
 -Lots of animals, craft and much more
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-[[dependencies.mainglobalrpg]] #optional
+[[dependencies.mainrpg]] #optional
     # the modid of the dependency
     modId="forge" #mandatory
     # Does this dependency have to exist - if not, ordering below must be specified
@@ -55,7 +55,7 @@ Global Rpg Mod:
     # Side this dependency is applied on - BOTH, CLIENT or SERVER
     side="BOTH"
 # Here's another dependency
-[[dependencies.mainglobalrpg]]
+[[dependencies.mainrpg]]
     modId="minecraft"
     mandatory=true
     versionRange="[1.15.1]"
